[project]
name = "app-idea-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "asyncpraw>=7.8.1",
    "dotenv>=0.9.9",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "praw>=7.8.1",
    "pyfiglet>=1.0.2",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.5",
    "tabulate>=0.9.0",
    "textblob>=0.19.0",
]
